--- a/MI_Login/index.html
+++ b/MI_Login/index.html
@@ -7,7 +7,7 @@
 
     <title>小米闪购 - 登录</title>
     <link rel="stylesheet" href="login.css">
-    <link rel="shortcut icon" href="../MI_Shop/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
