--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <a href=""><i class="iconfont">&#xe60c;</i>购物车<span>(0)</span></a>
             </div>
             <div class="topBar-info clearfix">
-                <a href="MI_Login/index.html">登录</a><span>|</span>
-                <a href="MI_Login/index.html">注册</a><span>|</span>
+                <a href="/MI_Login/index.html">登录</a><span>|</span>
+                <a href="/MI_Login/index.html">注册</a><span>|</span>
                 <a href="" class="sep">消息通知</a>
             </div>
         </div>
