--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 顶部广告 start -->
     <div class="topAd">
         <a href="#">
-            <img src="./img/top.jpg" alt="">
+            <img src="/img/top.jpg" alt="">
         </a>
     </div>
     <!-- 顶部广告 end -->
